# tokio-web-demo

./: .env  .env.docker  .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yaml
.github/workflows/: docker.yaml
backend/: .env.docker  Cargo.toml  Dockerfile  Readme.md
backend/src/: cpu_loadgen.rs  main.rs  rediskeys.rs  stats_collector.rs
backend/static/: custom.css
src/: blockers.rs  channel.rs  chat.rs  cpu_loadgen.rs  main.rs  rediskeys.rs  sleeper.rs  soccer_field.rs  stats_collector.rs
static/: custom.js
templates/: base.html  stats.html
ui/: Cargo.toml  README.md  Trunk.toml
ui/src/: app.rs  lib.rs  main.rs
