[package]
name = "tokio-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.2", features = ["http2", "ws", "tracing"] }
chrono = "0.4.31"
console-subscriber = "0.2.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sysinfo = "0.29.11"
tokio = { version = "1.35.0", features = ["full", "rt"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
