[package]
name = "tokio-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.7", features = ["http2", "ws", "tracing"] }
chrono = "0.4.38"
console-subscriber = "0.4.1"
log = "0.4.22"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.29.11"
tokio = { version = "1.41.1", features = ["full", "rt"] }
tokio-util = { version = "0.7.12", features = ["rt"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
seahash = { version = "4.1.0", features = ["use_std"] }
futures = "0.3.31"
