[package]
name = "tokio-web-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["http2", "ws", "tracing"] }
chrono = "0.4.39"
console-subscriber = "0.4.1"
log = "0.4.25"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sysinfo = { version = "0.29.11", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full", "rt"] }
tokio-util = { version = "0.7.13", features = ["rt"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
dotenv = "0.15.0"
seahash = { version = "4.1.0", features = ["use_std"] }
futures = "0.3.31"
tower-http = { version = "0.6.2", features = ["fs"] }
minijinja = { version = "2.6.0", features = ["loader", "serde", "serde_json", "urlencode"] }
